--- a/views/index.erb
+++ b/views/index.erb
@@ -1,13 +1,10 @@
-<div id="title">
-	<h2>Twidder</h2>
-	<h3>Classic eras in the digital error</h3>
-</div>
-<h1><%= @my_tweet %></h1>
-<h2><%= @my_url %></h2>
-<div id="needmore">
-	<h3>
-		<div id="hug">
-		<a href="/">more</a>
-		</div>
-	</h3>
-</div>
+<h1>twidder</h1>
+<h2>classic eras in the digital error</h2>
+
+<blockquote class="twitter-tweet" lang="en">
+	<p><%= @this_tweet %></p>
+	<a href=<%= @this_url %>>link</a>
+</blockquote>
+<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+<h3 class="refresh"><a href="/">more</a></h3>
