--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,6 @@
 <h1>twidder</h1>
 <h2>classic eras in the digital error</h2>
+<h3>searched for: <%= @error %></h3>
 
 <blockquote class="twitter-tweet" lang="en">
 	<p><%= @this_tweet %></p>
