--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,8 @@
+/* Twitter Colors */
+/* light blue: BAD6E7; */
+/* middle blue: 9FC4DA; */
+/* dark blue: 87B3CF; */
+
 .color1 {
   color: #6F83DE;
   background-color: #AFEEEE;
