--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,16 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
-    <title>TWIDDER</title>
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.css">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.min.css">
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <link href='http://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:600' rel='stylesheet' type='text/css'>
+    <link href="css/bootstrap.min.css" type="text/css" rel="stylesheet" />
+    <link href="css/bootstrap-responsive.min.css" type="text/css" rel="stylesheet"/>
+    <link href="css/styles.css" type="text/css" rel="stylesheet"/>
   </head>
-  <body class="<%=@color%>">
-    <%= yield %>
+  <body>
+    <div class="container-fluid">
+      <%= yield %>
+    </div>
+    <script src="/js/boostrap.min.js"></script>
   </body>
 </html>
