adds mistake and styling

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,5 @@
-<img class="center" src="../img/medium_logo.png" alt="Twidder Logo" />
+
+<div class="logo"><img class="center" src="../img/medium_logo.png" alt="Twidder Logo" /></div>
 <h2>classic eras in the digital error</h2>
 
 <h3>searched for: <%= @error %></h3>
