--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,4 @@
-
-<div class="logo"><img class="center" src="../img/medium_logo.png" alt="Twidder Logo" /></div>
+<div class="logo"><img class="center" src="../img/med_logo.png" alt="Twidder Logo" /></div>
 <h2>classic eras in the digital error</h2>
 
 <h3>searched for: <%= @error %></h3>
