--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -7,16 +7,17 @@ img.center {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    padding-top: .2%;
 }
     
 H2 { 
   text-align: center;
-  font-size: 2.15em; 
+  font-size: 1.9em; 
   line-height: 1em;
 }
 
 H3 { 
-  padding-top: 4%;
+  padding-top: 5%;
   text-align: center 
 }
 
@@ -31,7 +32,8 @@ body {
 /*  background-color: rgb(8, 26, 47);*/
   background-image:url("/img/background.png");
   background-repeat:no-repeat;
-  background-color: rgba(68, 90, 102, .89)
+  background-color: #4F6D7B;
+  /*background-color: rgba(68, 90, 102, .89)*/
 }
 
 .tweet {
