--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,5 @@
 <div class="logo"><img class="center" src="../img/med_logo.png" alt="Twidder Logo" /></div>
-<h2>classic eras in the digital error</h2>
+<h2>classic eras in the digital error&emsp;</h2>
 
 <h3>searched for: <%= @error %></h3>
 
