--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -12,7 +12,7 @@ img.center {
     
 H2 { 
   text-align: center;
-  font-size: 1.9em; 
+  font-size: 2.25em; 
   line-height: 1em;
 }
 
@@ -45,7 +45,6 @@ body {
     margin: 0 auto;
 }
 
-a:link {color:#D0D0D0;}      /* unvisited link */
-a:visited {color:#D0D0D0;}  /* visited link */
-a:hover {color:#D0D0D0;}  /* mouse over link */
-a:active {color:#D0D0D0;} 
+.btn-primary {
+  .buttonBackground(#2C5263, #23424F);
+}
