--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,8 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <link href="css/bootstrap.min.css" type="text/css" rel="stylesheet" />
-    <link href="css/bootstrap-responsive.min.css" type="text/css" rel="stylesheet"/>
+    <link href="css/bootstrap.css" type="text/css" rel="stylesheet" />
     <link href="css/styles.css" type="text/css" rel="stylesheet"/>
   </head>
   <body>
