adds more mistakes

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,6 +3,7 @@
   <head>
     <link href="css/bootstrap.css" type="text/css" rel="stylesheet" />
     <link href="css/styles.css" type="text/css" rel="stylesheet"/>
+    <title>Twidder</title>
   </head>
   <body>
     <div class="container-fluid">
